--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#111827">
     <link rel="icon" type="image/svg+xml" href="#" />
-    <title>breakIT ☕️</title>
+    <title>break ☕️</title>
   </head>
   <body>
     <div id="root"></div>
