--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/icons/favicon.png" />
-    <title>break ☕️</title>
+    <title>break</title>
   </head>
   <body>
     <div id="root"></div>
